# srellm

./: RAGAS_LEARNING_GUIDE.md  __init__.py  create_sample_runbooks.sh  docker-compose.yml  pyproject.toml  requirements.txt
evals/: eval_with_server.py  ragas_learning.py  retrieval_sanity.py
rag/: index_build.py  ingest.py  ingesthf.py  qdrant_retriever.py  retriever.py  setup_learning_data.py
serving/: providers.py  server.py
srellm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/: prompt_preview.py  search.py
